--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>A simple wiki</title>
+    <title>dioong wiki</title>
   </head>
   <body>
     <h1>A Simple Wiki</h1>
